@@ -2969,41 +2969,61 @@ package body Makeutl is
                   then
                      if (Unit_Based
                           or else Source.Unit = No_Unit_Index
-                          or else Source.Project.Library)
+                          or else Source.Project.Library
+                          or else Project.Qualifier = Aggregate_Library)
                        and then not Is_Subunit (Source)
                      then
                         OK := True;
                         Closure := False;
 
-                        if Source.Unit /= No_Unit_Index
-                          and then Source.Project.Library
-                          and then Source.Project.Standalone_Library /= No
-                        then
-                           --  Check if the unit is in the interface
-                           OK := False;
+                        declare
+                           SAL_Project : Project_Id := No_Project;
 
-                           declare
-                              List : String_List_Id :=
-                                Source.Project.Lib_Interface_ALIs;
-                              Element : String_Element;
+                        begin
+                           if Project.Qualifier = Aggregate_Library
+                             and then Project.Standalone_Library /= No
+                           then
+                              if Source.Unit /= No_Unit_Index then
+                                 SAL_Project := Project;
+                              end if;
 
-                           begin
-                              while List /= Nil_String loop
-                                 Element :=
-                                   Project_Tree.Shared.String_Elements.Table
-                                     (List);
+                           elsif Source.Unit /= No_Unit_Index
+                             and then Source.Project.Library
+                             and then Source.Project.Standalone_Library /= No
+                           then
+                              SAL_Project := Source.Project;
+                           end if;
 
-                                 if Element.Value = Name_Id (Source.Dep_Name)
-                                 then
-                                    OK := True;
-                                    Closure := True;
-                                    exit;
-                                 end if;
+                           if SAL_Project /= No_Project then
 
-                                 List := Element.Next;
-                              end loop;
-                           end;
-                        end if;
+                              --  Check if the unit is in the interface
+
+                              OK := False;
+
+                              declare
+                                 List    : String_List_Id :=
+                                             SAL_Project.Lib_Interface_ALIs;
+                                 Element : String_Element;
+
+                              begin
+                                 while List /= Nil_String loop
+                                    Element :=
+                                      Project_Tree.Shared.String_Elements.Table
+                                        (List);
+
+                                    if Element.Value =
+                                         Name_Id (Source.Dep_Name)
+                                    then
+                                       OK := True;
+                                       Closure := True;
+                                       exit;
+                                    end if;
+
+                                    List := Element.Next;
+                                 end loop;
+                              end;
+                           end if;
+                        end;
 
                         if OK then
                            Queue.Insert
