@@ -1,3 +1,14 @@
+2014-07-30  Vincent Celier  <celier@adacore.com>
+
+	* makeutl.adb (Insert_Project_Sources): When the library project
+	is an aggregate Stand-Alone Library, insert in the queue the
+	Ada interface units, with Closure set to True;
+
+2014-07-30  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* sem_util.adb: Fix minor typo.
+	* makeutl.adb: Minor reformatting.
+
 2014-07-30  Robert Dewar  <dewar@adacore.com>
 
 	* exp_ch7.adb, checks.adb, makeutl.adb, makeutl.ads: Minor reformatting.
